加入上传系列图片并展示等功能

--- a/templates/curriculum/add_curriculum.html
+++ b/templates/curriculum/add_curriculum.html
@@ -47,12 +47,21 @@
           </tr>
           <tr>
               <td>
+                  课程简介：
+              </td>
+              <td>
+                  {{ form.introduce }}
+              </td>
+          </tr>
+          <tr>
+              <td>
                   请上传mp4格式文件：
               </td>
               <td>
                   {{ form.post_attachment }}
               </td>
           </tr>
+
           <tr>
               <td>
                   请上传附件：
