--- a/templates/curriculum/show_series.html
+++ b/templates/curriculum/show_series.html
@@ -1,17 +1,17 @@
 {% extends "base.html" %}
 
-{% block title %}加入新系列{% endblock %}
+{% block title %}系列详情{% endblock %}
 
 {% block content %}
 <div class="container-fluid" style="margin: 0px 15px">
     <div class="row">
         <div class="col-lg-7">
             <div class="thumbnail">
-                <img src="/static/curriculum/image/qwe.jpg">
+                <img src="{{ series.img.url }}">
             </div>
         </div>
         <div class="col-lg-5">
-            {% if joined %}
+
             <h3>{{ series.name }}</h3>
             <div style="width: 400px">
                 授课教师：
@@ -20,14 +20,16 @@
                 </span>
                 <br/>
                 <p style="word-wrap:break-word; word-break:normal;">
-                    {{ series.information }}
+                    系列简介：{{ series.introduce }}
                 </p>
                 <div>
                     <span style="border:1px solid #ccc;">
-                        {{ series.tag }}
+                        系列标签：{{ series.tag }}
                     </span>
                 </div>
+                选课人数：{{ joined_number }}
             </div>
+            {% if joined %}
             已加入学习&nbsp;&nbsp;
             <a href="{% url 'my_series' series.id %}"><button>开始学习</button></a>
 
@@ -36,6 +38,10 @@
             <a href="{% url 'join_series' series.id %}"><button>加入学习</button></a>
 
             {% endif %}
+
+            {% for i in cur_list %}
+            {{ i.name }} {{ i.introduce }}
+            {% endfor %}
 
         </div>
     </div>
