--- a/templates/curriculum/all_series.html
+++ b/templates/curriculum/all_series.html
@@ -23,7 +23,7 @@
             {% for i in series_list %}
             <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="thumbnail">
-              <img src="/static/curriculum/image/qwe.jpg">
+              <img src="{{ i.img.url }}">
               <div class="caption">
                 <h3>{{ i.name }}</h3>
                 <p>{{ i.information }}</p>
@@ -38,7 +38,7 @@
         {% for i in series_list %}
           <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
             <div class="thumbnail">
-              <img src="/static/curriculum/image/qwe.jpg">
+              <img src="{{ i.img.url }}">
               <div class="caption">
                 <h3>{{ i.name }}</h3>
                 <p>{{ i.information }}</p>
