--- a/templates/curriculum/my_series.html
+++ b/templates/curriculum/my_series.html
@@ -11,7 +11,7 @@
     <div class="row">
         <div class="col-lg-7">
             <div class="thumbnail">
-                <img src="/static/curriculum/image/qwe.jpg">
+                <img src="{{ series.img.url }}">
             </div>
         </div>
         <div class="col-lg-5">
@@ -29,6 +29,7 @@
                     <span style="border:1px solid #ccc;">
                         {{ series.tag }}
                     </span>
+
                 </div>
             </div>
         </div>
