--- a/templates/curriculum/play_ajax_obj.html
+++ b/templates/curriculum/play_ajax_obj.html
@@ -1,3 +1,4 @@
+<div>课程名：{{ cur.name }}</div>
 <video width="960" height="600" controls="controls">
   <source src="{% url 'play_file_obj' id %}" type="video/mp4">
   <source src="{% url 'play_file_obj' id %}" type="video/mp4">
