--- a/templates/curriculum/play.html
+++ b/templates/curriculum/play.html
@@ -4,7 +4,7 @@
 <div class="container-fluid" style="margin: 0px 15px">
     <div class="row">
         <div class="col-lg-12">
-            <h2>播放</h2>
+            <h2>系列名：{{ series.name }}</h2>
         </div>
     </div>
     <div class="row">
