--- a/templates/problem/problem_show.html
+++ b/templates/problem/problem_show.html
@@ -24,7 +24,7 @@
             <h4 class="h">题目名</h4>
         </div>
         <div class="bo">
-            {{ problem.number }}.   {{ problem.name }}
+            {{ problem.id }}.   {{ problem.name }}
         </div>
     </div>
     <div class="mar">
