--- a/templates/curriculum/all_series.html
+++ b/templates/curriculum/all_series.html
@@ -20,18 +20,17 @@
         <div class="row">
             {% if editor %}
 
-            {% for i in series_list %}
-            <a href="{% url 'show_series' i.id %}">
+              {% for i in series_list %}
+            <a href="{% url 'editor_cur_list' i.id %}">
                 <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
                     <div class="thumbnail">
-                      <img src="{{ i.img.url }}">
+                      <img src="/static/curriculum/image/qwe.jpg">
                       <div class="caption">
                         <h3>{{ i.name }}</h3>
                         <p>{{ i.information }}</p>
-                        <p>{{ i.tag }}</p>
                       </div>
-                </div>
-              </div>
+                    </div>
+                 </div>
             </a>
             {% endfor %}
 
