--- a/templates/curriculum/editor/editor_script.html
+++ b/templates/curriculum/editor/editor_script.html
@@ -10,12 +10,27 @@
 <script>
 
 <!--ajax 视频选集-->
-$(document).ready(function(){
-    $("button").click(function () {
-        var id=$(this).attr("about")
-        $("#play").load('/editor_play_ajax_obj/'+id);
-        });
-});
+function loadXMLDoc(id)
+{
+var xmlhttp;
+if (window.XMLHttpRequest)
+  {// code for IE7+, Firefox, Chrome, Opera, Safari
+  xmlhttp=new XMLHttpRequest();
+  }
+else
+  {// code for IE6, IE5
+  xmlhttp=new ActiveXObject("Microsoft.XMLHTTP");
+  }
+xmlhttp.onreadystatechange=function()
+  {
+  if (xmlhttp.readyState==4 && xmlhttp.status==200)
+    {
+    document.getElementById("play").innerHTML=xmlhttp.responseText;
+    }
+  }
+xmlhttp.open("GET","/editor_play_ajax_obj/"+id,true);
+xmlhttp.send();
+}
 
 </script>
 
