--- a/templates/curriculum/play.html
+++ b/templates/curriculum/play.html
@@ -3,17 +3,13 @@
 {% block content %}
 <div class="container-fluid" style="margin: 0px 15px">
     <div class="row">
-        <div class="col-lg-12">
-            <h2>系列名：{{ series.name }}</h2>
-        </div>
-    </div>
-    <div class="row">
         <div class="col-lg-10">
             <div id="play">
-            <video width="1020" height="540" controls="controls">
-              <source src="" type="video/mp4">
-            Your browser does not support the video tag.
-            </video>
+                <div>课程名：</div>
+                <video width="1020" height="540" controls="controls">
+                  <source src="" type="video/mp4">
+                Your browser does not support the video tag.
+                </video>
             </div>
         </div>
         <div class="col-lg-2">
@@ -27,10 +23,6 @@
         <div class="col-lg-8">
             <div class="container-fluid">
                 <div class="row" id="jd_book">
-
-
-
-
 
                 </div>
             </div>
