--- a/templates/problem/problem_show.html
+++ b/templates/problem/problem_show.html
@@ -9,6 +9,8 @@
     .bo{
         width: 500px;
         background-color: #1A9CC1;
+        -moz-border-radius: 20px;
+        -webkit-border-radius: 20px;
         border-radius: 20px;
         padding: 10px 30px;
     }
