--- a/templates/curriculum/my_series.html
+++ b/templates/curriculum/my_series.html
@@ -40,22 +40,22 @@
         </div>
         <div class="col-lg-11">
             {% for i in list %}
-            <a href="{% url 'play' i.series.id %}">
-                <button style="width: 280px;height:40px">
-                    <div style="width: 80px;float:left;">
-                        <span style="font-size: 20px;height: 20px;overflow: hidden;">{{ i.name }}</span>
-                    </div>
-                    <div style="width: 200px;">
-                        <span style="font-size: 15px;height: 15px;overflow: hidden;">{{ i.introduce }}</span>
-                    </div>
-                </button>
-            </a>
-            <br/>
+            <div>
+                <a href="{% url 'play' i.series.id %}">
+                    <button style="width: 400px;height:40px">
+                        <div style="width: 90px;float:left;">
+                            <span style="display: block;font-size: 20px;width: 80px;height: 30px;overflow: hidden;">{{ i.name }}</span>
+                        </div>
+                        <div style="width: 280px;float:right;">
+                            <span style="display: block;width: 270px;height: 30px;overflow: hidden;">{{ i.introduce }}</span>
+                        </div>
+                    </button>
+                </a>
+            </div>
             {% endfor %}
             {% if add %}
             <a href="{% url 'add_curriculum' series.id %}"><button style="width: 280px;height:40px">添加课程</button></a>
             {% endif %}
-            <br/>
             <a href="{% url 'problem_list' series.id %}"><button style="width: 280px;height:40px">题目列表</button></a>
         </div>
     </div>
