--- a/templates/base.html
+++ b/templates/base.html
@@ -60,11 +60,11 @@
     <div style="height: 50px">
 
     </div>
-<nav class="navbar navbar-default navbar-fixed-bottom">
-  <div class="container-fluid" style="padding: 0 47%">
-      <div style="width: 80px">
-          版权所有
-      </div>
+<nav class="navbar navbar-default navbar-fixed-bottom" style="min-height: 30px;">
+  <div class="container-fluid">
+      <div class="row" style="text-align: center;">
+            <h4>版权所有</h4>
+        </div>
   </div>
 </nav>
 </body>
