--- a/templates/home.html
+++ b/templates/home.html
@@ -154,22 +154,18 @@
         <img src="/static/curriculum/image/006.png" style="width: 300px">
     </div>
 </div>
-<div class="row">
-    <h3 style="margin: 0 42%">-----精品课程-----</h3>
+<div class="row" style="text-align: center;">
+    <h3>-----精品课程-----</h3>
 </div>
 <div class="row" style="margin: 0 50px">
     {% for i in series_list %}
         <a href="{% url 'show_series' i.id %}">
-            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-            <div class="thumbnail">
-              <img src="{{ i.img.url }}">
-              <div class="caption">
-                <h3>{{ i.name }}</h3>
-                <p>{{ i.information }}</p>
-                <p>{{ i.tag }}</p>
-              </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
+              <img src="{{ i.img.url }}" style="width: 270px;height:180px;margin: 5px 5px">
+                <h3 style="margin: 5px;">{{ i.name }}</h3>
+                <p style="margin: 0 10px;">{{ i.information }}</p>
+                <p style="margin: 0 10px;">{{ i.tag }}</p>
             </div>
-          </div>
         </a>
     {% endfor %}
 </div>
