--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     {% include 'navbar.html' %}
-<div class="center">
+<div  id="cent" class="center">
               {% block content %}
 
               {% endblock %}
