--- a/templates/curriculum/my_series.html
+++ b/templates/curriculum/my_series.html
@@ -9,12 +9,12 @@
 {% block content %}
 <div class="container-fluid" style="margin: 0px 15px">
     <div class="row">
-        <div class="col-lg-7">
-            <div class="thumbnail">
-                <img src="{{ series.img.url }}">
+        <div class="col-lg-8">
+            <div style="padding: 0px;width: 780px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
+                <img src="{{ series.img.url }}" style="width: 770px;height:450px;margin: 5px 5px">
             </div>
         </div>
-        <div class="col-lg-5">
+        <div class="col-lg-4">
             <h3>{{ series.name }}</h3>
             <div style="width: 400px">
                 授课教师：
@@ -39,6 +39,7 @@
 
         </div>
         <div class="col-lg-11">
+            <br/>
             {% for i in list %}
             <div>
                 <a href="{% url 'play' i.series.id %}">
