--- a/templates/curriculum/my_series_list.html
+++ b/templates/curriculum/my_series_list.html
@@ -1,10 +1,56 @@
 {% extends "base.html" %}
 
 {% block title %}我的系列课程{% endblock %}
+{% block js %}
+{% load static %}
 
+<script src="{% static 'curriculum/jquery-3.3.1.js' %}"></script>
+{% block style %}
+    <style type="text/css">
+        body{
+            font-family: Microsoft YaHei UI, sans-serif;
+            font-size: 16px;
+            line-height:30px;
+            background-image: url(/static/curriculum/image/000.jpg);
+            background-repeat: repeat;
+        }
+        td,th{
+            font-family: Microsoft YaHei UI, sans-serif;
+            font-size: 16px;
+            line-height:30px;
+        }
+        html,body,div,ul,
+        img{
+            padding: 0;
+            margin: 0;
+        }
+        .nav1{
+            height: 46px;
+            width: 100%;
+            line-height: 30px;
+            padding-left: 20px;
+
+            background-color: #0f0f0f;
+        }
+        section{
+            min-height: 600px;
+        }
+
+        .center{
+            width: 100%;
+
+        }
+        input{
+            width: 180px;
+            height: 35px;
+        }
+    </style>
+    {% endblock %}
+{% endblock %}
 {% block content %}
 
 <div class="container-fluid" style="margin: 0px 15px">
+
     <div class="row">
         <div class="col-lg-12">
              {% if not add %}
@@ -22,16 +68,12 @@
                   {% else %}
                     <a href="{% url 'my_series' i.id %}" style="display:block;text-decoration:none;">
                   {% endif %}
-                    <div class="thumbnail">
-                      <img src="{{ i.img.url }}">
-                      <div class="caption">
-                        <h3>{{ i.name }}</h3>
-                          <span style="border:1px solid #ccc;">
-                                {{ i.tag }}
-                            </span>
-                        <p>{{ i.information }}</p>
-                  <p>详情</p>
-              </div>
+                        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;margin: 10px 15px">
+                          <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
+                            <h3 style="margin: 5px;">{{ i.name }}</h3>
+                            <p style="margin: 0 10px;">{{ i.information }}</p>
+                            <p style="margin: 0 10px;">{{ i.tag }}</p>
+                  </div>
             </div>
                 </a>
           </div>
