--- a/templates/curriculum/my_series.html
+++ b/templates/curriculum/my_series.html
@@ -1,10 +1,60 @@
 {% extends "base.html" %}
 
 {% block title %}系列信息{% endblock %}
- {% block js %}
+{% block js %}
 {% load static %}
 
-<script src="{% static 'curriculum/jquery-3.3.1.js' %}"></script>
+{% block style %}
+    <style type="text/css">
+         {% if perms.curriculum.upload_file %}
+            body{
+                    font-family: Microsoft YaHei UI, sans-serif;
+                    font-size: 16px;
+                    line-height:30px;
+
+                    background-repeat: repeat;
+                }
+         {% else %}
+            body{
+                    font-family: Microsoft YaHei UI, sans-serif;
+                    font-size: 16px;
+                    line-height:30px;
+                    background-image: url(/static/curriculum/image/000.jpg);
+                    background-repeat: repeat;
+                }
+         {% endif %}
+        td,th{
+            font-family: Microsoft YaHei UI, sans-serif;
+            font-size: 16px;
+            line-height:30px;
+        }
+        html,body,div,ul,
+        img{
+            padding: 0;
+            margin: 0;
+        }
+        .nav1{
+            height: 46px;
+            width: 100%;
+            line-height: 30px;
+            padding-left: 20px;
+
+            background-color: #0f0f0f;
+        }
+        section{
+            min-height: 600px;
+        }
+
+        .center{
+            width: 100%;
+
+        }
+        input{
+            width: 180px;
+            height: 35px;
+        }
+    </style>
+    {% endblock %}
 {% endblock %}
 {% block content %}
 <div class="container-fluid" style="margin: 0px 15px">
@@ -38,7 +88,7 @@
         <div class="col-lg-1">
 
         </div>
-        <div class="col-lg-11">
+        <div class="col-lg-8">
             <br/>
             {% for i in list %}
             <div>
@@ -58,6 +108,9 @@
             <a href="{% url 'add_curriculum' series.id %}"><button style="width: 280px;height:40px">添加课程</button></a>
             {% endif %}
             <a href="{% url 'problem_list' series.id %}"><button style="width: 280px;height:40px">题目列表</button></a>
+        </div>
+        <div class="col-lg-3">
+            <a href="{% url 'show_series' series.id %}"><button style="width: 180px;height:40px">返回系列介绍</button></a>
         </div>
     </div>
 </div>
