--- a/templates/curriculum/show_series.html
+++ b/templates/curriculum/show_series.html
@@ -1,24 +1,71 @@
 {% extends "base.html" %}
 
 {% block title %}系列详情{% endblock %}
- {% block js %}
+{% block js %}
 {% load static %}
 
-<script src="{% static 'curriculum/jquery-3.3.1.js' %}"></script>
-<script>
-    function taf(){
-        $("#cent").removeClass("center");
-    }
-</script>
+{% block style %}
+    <style type="text/css">
+        {% if perms.curriculum.upload_file %}
+            body{
+                    font-family: Microsoft YaHei UI, sans-serif;
+                    font-size: 16px;
+                    line-height:30px;
+
+                    background-repeat: repeat;
+                }
+         {% else %}
+            body{
+                    font-family: Microsoft YaHei UI, sans-serif;
+                    font-size: 16px;
+                    line-height:30px;
+                    background-image: url(/static/curriculum/image/000.jpg);
+                    background-repeat: repeat;
+                }
+         {% endif %}
+        td,th{
+            font-family: Microsoft YaHei UI, sans-serif;
+            font-size: 16px;
+            line-height:30px;
+        }
+        html,body,div,ul,
+        img{
+            padding: 0;
+            margin: 0;
+        }
+        .nav1{
+            height: 46px;
+            width: 100%;
+            line-height: 30px;
+            padding-left: 20px;
+
+            background-color: #0f0f0f;
+        }
+        section{
+            min-height: 600px;
+        }
+
+        .center{
+            width: 100%;
+
+        }
+        input{
+            width: 180px;
+            height: 35px;
+        }
+    </style>
+    {% endblock %}
 {% endblock %}
 {% block content %}
-<div class="container-fluid" style="margin: 0px 15px" onload="taf">
+<div class="container-fluid" style="margin: 0px 15px">
     <div class="row">
+        <!--系列图片-->
         <div class="col-lg-8">
             <div style="padding: 0px;width: 780px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
                 <img src="{{ series.img.url }}" style="width: 770px;height:450px;margin: 5px 5px">
             </div>
         </div>
+        <!--系列信息及是否已购此课程-->
         <div class="col-lg-4">
             <h3>{{ series.name }}</h3>
             <div style="width: 400px">
@@ -38,6 +85,7 @@
                 </div>
                 选课人数：{{ joined_number }}
             </div>
+            <!--判断是否已购方法-->
             {% if joined %}
             已加入学习&nbsp;&nbsp;
             <a href="{% url 'my_series' series.id %}"><button>开始学习</button></a>
@@ -53,6 +101,7 @@
             <div class="col-lg-1">
 
             </div>
+            <!--视频目录-->
             <div class="col-lg-11">
                 <br/>
             {% for i in cur_list %}
@@ -71,9 +120,5 @@
             </div>
         </div>
     </div>
-
-
-
-
 
 {% endblock %}
