--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,10 @@
 <head>
     {% include 'head.html' %}
     <title>{% block title %}欢迎光临 - hankwang{% endblock %}</title>
-    {% block js %}{% endblock %}
+    {% block js %}
+
+
+    {% endblock %}
 
     <meta charset="UTF-8">
     {% block style %}
@@ -13,7 +16,6 @@
                     font-family: Microsoft YaHei UI, sans-serif;
                     font-size: 16px;
                     line-height:30px;
-
                     background-repeat: repeat;
                 }
          {% else %}
