--- a/templates/curriculum/my_series_list.html
+++ b/templates/curriculum/my_series_list.html
@@ -62,21 +62,29 @@
     </div>
     <div class="row">
         {% for i in list %}
-          <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
               {% if not add %}
-                  <a href="{% url 'show_series' i.id %}" style="display:block;text-decoration:none;">
-                  {% else %}
-                    <a href="{% url 'my_series' i.id %}" style="display:block;text-decoration:none;">
-                  {% endif %}
-                        <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;margin: 10px 15px">
-                          <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
-                            <h3 style="margin: 5px;">{{ i.name }}</h3>
-                            <p style="margin: 0 10px;">{{ i.information }}</p>
-                            <p style="margin: 0 10px;">{{ i.tag }}</p>
-                  </div>
-            </div>
+                <a href="{% url 'show_series' i.id %}">
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
+                              <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
+                                <h3 style="margin: 5px;">{{ i.name }}</h3>
+                                <p style="margin: 0 10px;">{{ i.information }}</p>
+                                <p style="margin: 0 10px;">{{ i.tag }}</p>
+                          </div>
+                    </div>
                 </a>
-          </div>
+              {% else %}
+                <a href="{% url 'my_series' i.id %}">
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
+                            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" style="padding: 0px;width: 310px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
+                              <img src="{{ i.img.url }}" style="width: 300px;height:180px;margin: 5px 5px">
+                                <h3 style="margin: 5px;">{{ i.name }}</h3>
+                                <p style="margin: 0 10px;">{{ i.information }}</p>
+                                <p style="margin: 0 10px;">{{ i.tag }}</p>
+                          </div>
+                    </div>
+                </a>
+              {% endif %}
         {% endfor %}
     </div>
     <div class="row">
