--- a/templates/curriculum/all_series.html
+++ b/templates/curriculum/all_series.html
@@ -83,7 +83,7 @@
             {% else %}
             {% for i in series_list %}
                 <a href="{% url 'show_series' i.id %}">
-                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;margin: 10px 15px">
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3"style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;margin: 10px">
                           <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
                             <h3 style="margin: 5px;">{{ i.name }}</h3>
                             <p style="margin: 0 10px;">{{ i.information }}</p>
