--- a/templates/curriculum/my_series_list.html
+++ b/templates/curriculum/my_series_list.html
@@ -7,13 +7,23 @@
 <script src="{% static 'curriculum/jquery-3.3.1.js' %}"></script>
 {% block style %}
     <style type="text/css">
-        body{
-            font-family: Microsoft YaHei UI, sans-serif;
-            font-size: 16px;
-            line-height:30px;
-            background-image: url(/static/curriculum/image/000.jpg);
-            background-repeat: repeat;
-        }
+        {% if perms.curriculum.upload_file %}
+            body{
+                    font-family: Microsoft YaHei UI, sans-serif;
+                    font-size: 16px;
+                    line-height:30px;
+
+                    background-repeat: repeat;
+                }
+         {% else %}
+            body{
+                    font-family: Microsoft YaHei UI, sans-serif;
+                    font-size: 16px;
+                    line-height:30px;
+                    background-image: url(/static/curriculum/image/000.jpg);
+                    background-repeat: repeat;
+                }
+         {% endif %}
         td,th{
             font-family: Microsoft YaHei UI, sans-serif;
             font-size: 16px;
@@ -64,25 +74,21 @@
         {% for i in list %}
               {% if not add %}
                 <a href="{% url 'show_series' i.id %}">
-                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
-                              <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
-                                <h3 style="margin: 5px;">{{ i.name }}</h3>
-                                <p style="margin: 0 10px;">{{ i.information }}</p>
-                                <p style="margin: 0 10px;">{{ i.tag }}</p>
-                          </div>
-                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;margin: 10px">
+                      <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
+                        <h3 style="margin: 5px;">{{ i.name }}</h3>
+                        <p style="margin: 0 10px;">{{ i.information }}</p>
+                        <p style="margin: 0 10px;">{{ i.tag }}</p>
+                  </div>
                 </a>
               {% else %}
                 <a href="{% url 'my_series' i.id %}">
-                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3">
-                            <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
-                              <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
-                                <h3 style="margin: 5px;">{{ i.name }}</h3>
-                                <p style="margin: 0 10px;">{{ i.information }}</p>
-                                <p style="margin: 0 10px;">{{ i.tag }}</p>
-                          </div>
-                    </div>
+                    <div class="col-xs-12 col-sm-6 col-md-3 col-lg-3" style="padding: 0px;width: 280px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;margin: 10px">
+                      <img src="{{ i.img.url }}" style="width: 270px;height:140px;margin: 5px 5px">
+                        <h3 style="margin: 5px;">{{ i.name }}</h3>
+                        <p style="margin: 0 10px;">{{ i.information }}</p>
+                        <p style="margin: 0 10px;">{{ i.tag }}</p>
+                  </div>
                 </a>
               {% endif %}
         {% endfor %}
