--- a/templates/curriculum/play_script.html
+++ b/templates/curriculum/play_script.html
@@ -46,7 +46,7 @@ xmlhttp.send();
 }
 
 $(document).ready(function(){
-        var id={{ series_id }}
+        var id={{ series.id }}
         $("#jd_book").load('/jd_book/'+id);
 });
 
