--- a/templates/curriculum/my_series.html
+++ b/templates/curriculum/my_series.html
@@ -11,8 +11,7 @@
                     font-family: Microsoft YaHei UI, sans-serif;
                     font-size: 16px;
                     line-height:30px;
-
-                    background-repeat: repeat;
+                    background-color: #ccccff;
                 }
          {% else %}
             body{
@@ -58,6 +57,7 @@
 {% endblock %}
 {% block content %}
 <div class="container-fluid" style="margin: 0px 15px">
+            <br/>
     <div class="row">
         <div class="col-lg-8">
             <div style="padding: 0px;width: 780px;background-color: white;-moz-border-radius: 5px;-webkit-border-radius: 5px;border-radius: 5px;">
