--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
                     font-family: Microsoft YaHei UI, sans-serif;
                     font-size: 16px;
                     line-height:30px;
-                    background-repeat: repeat;
+                    background-color: #ccccff;
                 }
          {% else %}
             body{
@@ -38,14 +38,7 @@
             padding: 0;
             margin: 0;
         }
-        .nav1{
-            height: 46px;
-            width: 100%;
-            line-height: 30px;
-            padding-left: 20px;
 
-            background-color: #0f0f0f;
-        }
         section{
             min-height: 600px;
         }
@@ -75,8 +68,7 @@
 
               {% endblock %}
 </div>
-    <div style="height: 50px">
-
+    <div style="height: 300px">
     </div>
     <!--下部版权-->
 <nav class="navbar navbar-default navbar-fixed-bottom" style="min-height: 30px;">
