--- a/templates/curriculum/my_series_list.html
+++ b/templates/curriculum/my_series_list.html
@@ -12,8 +12,7 @@
                     font-family: Microsoft YaHei UI, sans-serif;
                     font-size: 16px;
                     line-height:30px;
-
-                    background-repeat: repeat;
+                    background-color: #ccccff;
                 }
          {% else %}
             body{
@@ -60,7 +59,7 @@
 {% block content %}
 
 <div class="container-fluid" style="margin: 0px 15px">
-
+        <br/>
     <div class="row">
         <div class="col-lg-12">
              {% if not add %}
