--- a/templates/home.html
+++ b/templates/home.html
@@ -19,8 +19,7 @@
                     font-family: Microsoft YaHei UI, sans-serif;
                     font-size: 16px;
                     line-height:30px;
-
-                    background-repeat: repeat;
+                    background-color: #ccccff;
                 }
          {% else %}
             body{
@@ -132,22 +131,22 @@
     </style>
 {% endblock %}
 {% block content %}
-<div id="container" style="position: relative;top: -20px;margin:0">
+<div id="container">
     <div class="row">
         <div class="col-lg-12">
             <div id="imgs" style="width: 100%" class="imaa ima1">
-                <img src="/static/curriculum/image/001.png" class="selected">
-                <img src="/static/curriculum/image/002.png">
-                <img src="/static/curriculum/image/003.png">
-                <img src="/static/curriculum/image/004.png">
-                <img src="/static/curriculum/image/005.png">
+                <img src="/static/curriculum/image/001.jpg" class="selected">
+                <img src="/static/curriculum/image/002.jpg">
+                <img src="/static/curriculum/image/003.jpg">
+                <img src="/static/curriculum/image/004.jpg">
+                <img src="/static/curriculum/image/005.jpg">
             </div>
             <div id="imgs" style="width: 100%" class="imaa ima2">
-                <img src="/static/curriculum/image/001.png" class="selected">
-                <img src="/static/curriculum/image/002.png">
-                <img src="/static/curriculum/image/003.png">
-                <img src="/static/curriculum/image/004.png">
-                <img src="/static/curriculum/image/005.png">
+                <img src="/static/curriculum/image/001.jpg" class="selected">
+                <img src="/static/curriculum/image/002.jpg">
+                <img src="/static/curriculum/image/003.jpg">
+                <img src="/static/curriculum/image/004.jpg">
+                <img src="/static/curriculum/image/005.jpg">
             </div>
             <ul id="tab">
                 <li class="selected">1</li>
