--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 
 <div class="container-fluid">
     <div class="row">
-        <nav class="navbar navbar-default equinav" role="navigation">
+        <nav class="navbar navbar-default equinav" role="navigation" style="margin-bottom:0px">
         <div class="col-lg-2">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
