--- a/templates/user/register.html
+++ b/templates/user/register.html
@@ -22,7 +22,7 @@
 
 <div class="form-group">
 <label for="id_username">手机号码</label>
-<input type="email" class="form-control" id="id_username" aria-describedby="emailHelp" placeholder="输入用户名" name="username">
+<input type="tel" class="form-control" id="id_username" aria-describedby="emailHelp" placeholder="输入用户名" name="username">
 </div>
 
 <div class="form-group">
