--- a/templates/copyright.html
+++ b/templates/copyright.html
@@ -1,3 +1,32 @@
+{% load static %}
+<div class="link mt-5 mb-3">
+                <div class="container">
+                    <h5 class="py-4">合作院校</h5>
+                    <div class="d-flex flex-wrap c_Schools">
+                            <img src="{% static 'images/020.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/021.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/022.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/025.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/026.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/027.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/028.png' %}" alt="" class="pr-5 py-2">
+                            <img src="{% static 'images/029.png' %}" alt="" class="pr-5 py-2">
+                        </div>
+                    <h5 class="w-100 border-top py-4 mt-5">课程来源</h5>
+                    <div class="d-flex flex-wrap c_Links">
+                            <img src="{% static 'images/001.jpeg' %}" alt="" class="mr-5 my-3" >
+                            <img src="{% static 'images/002.png' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/003.jpg' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/004.jpg' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/005.jpg' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/006.png' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/007.jpg' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/008.jpg' %}" alt="" class="mr-5 my-3">
+                            <img src="{% static 'images/009.jpg' %}" alt="" class="mr-0 my-3">
+                        </div>
+                    
+                </div>
+            </div>
 <div class="w-100 mb-0 mt-5 pb-3">
         <div class="c_NavbarBorder d-flex flex-row justify-content-between">
                 <span class="c_NavbarBorderItem c_BgDarkGreen c_W25"></span>
@@ -7,5 +36,5 @@
                 <span class="c_NavbarBorderItem c_BgBlue c_W15"></span>
                 <span class="c_NavbarBorderItem c_BgGreen c_W30"></span>
             </div>
-    <div class="copytight w-100 mt-3">&copy; 2018</div>
+    <div class="copytight w-100 mt-3">在线授课系统 版权所有&copy; 2018 网站备案：黑ICP备100000号</div>
 </div>
