--- a/templates/curriculum/my_series_list.html
+++ b/templates/curriculum/my_series_list.html
@@ -30,11 +30,8 @@
         </div>
         <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-end  c_Page">
-                  <li class="page-item"><a class="page-link" href="#">Previous</a></li>
-                  <li class="page-item"><a class="page-link" href="#">1</a></li>
-                  <li class="page-item"><a class="page-link" href="#">2</a></li>
-                  <li class="page-item"><a class="page-link" href="#">3</a></li>
-                  <li class="page-item"><a class="page-link" href="#">Next</a></li>
+                  <li class="page-item"><a class="page-link" href="#">上一页</a></li>
+                  <li class="page-item"><a class="page-link" href="#">下一页</a></li>
                 </ul>
               </nav>
 </div>
